2009-02-22  Armin Burgmeier  <armin@openismus.com>

	* libgda/gda-util.c (gda_utility_data_model_dump_data_to_xml): Don't
	leak rcols, fixes bug #572734

2009-02-21  Armin Burgmeier  <armin@openismus.com>

	* libgda/sqlite/gda-sqlite-provider.c:
	gda_sqlite_provider_begin_transaction()
	gda_sqlite_provider_commit_transaction()
	gda_sqlite_provider_rollback_transaction(): Set error when statement
	execution fails.

2009-02-21  Vivien Malerba <malerba@gnome-db.org>

	* libgda/gda-meta-store.c: corrected gda_meta_store_schema_get_structure(), fixes
	bug #542847

2009-02-18  Vivien Malerba <malerba@gnome-db.org>

	* libgda/sqlite/sqlite-src: uses SQLite version 3.6.11

2009-02-18  Vivien Malerba <malerba@gnome-db.org>

	* doc/C: doc. improvements regarding GdaDataHandler
	* providers/mysql/gda-mysql-ddl.c:
	* providers/postgres/gda-postgres-ddl.c:
	* providers/postgres/gda-postgres-handler-bin.c:
	* libgda/sqlite/gda-sqlite-handler-bin.c:
	* libgda/handlers/gda-handler-type.c:
	* libgda/handlers/gda-handler-bin.c:
	* libgda/gda-data-handler.c;
	* libgda/gda-server-provider.c: make sure the
	gda_data_handler_get_sql_from_value() function is implemented in a
	coherent way, fixed bug #572220

2009-02-17  Vivien Malerba <malerba@gnome-db.org>

	* configure.in:
	* providers/sybase/main.c:
	* Makefile.w32: removed any obsolete reference to bonobo,
	for bug #571879
	* libgda/gda-value.[ch]:
	* libgda/handlers/gda-handler-bin.c:
	* providers/postgres/gda-postgres-handler-bin.c:
	  - fixed gda_string_to_binary() and gda_string_to_blob(),
	    for bug #572028
	  - removed the const from gda_value_take_binary() and
	    gda_value_take_blob()

2009-02-15  Vivien Malerba <malerba@gnome-db.org>

	* samples/MetaStore/example.c: corrected the usage of
	gda_connection_get_meta_store_data()
	* libgda/gda-connection.c: when using gda_connection_get_meta_store_data()
	with GDA_CONNECTION_META_FIELDS, accept the filter composed of